--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ on:
       - src/**
 
 jobs:
-  docker:
+  ci:
     runs-on: ubuntu-latest
     steps:
       - name: Login to Docker Hub
@@ -28,3 +28,21 @@ jobs:
         with:
           push: true
           tags: aumthakkar/3py-app:${{ env.COMMIT_ID }}
+    
+    outputs:
+      commit_id: ${{ env.COMMIT_ID }}
+
+  cd:
+    runs-on: ubuntu-latest
+    needs: ci
+    steps:
+      - name: ArgoCD Sync
+        shell: bash
+        run: |
+          argocd login argocd-server.argocd \
+          --grpc-web \
+          --insecure \
+          --username admin \
+          --password ${{ secrets.ARGOCD_PASSWORD }}
+          
+          argocd app sync py-app-3
