--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,7 +33,7 @@ jobs:
       commit_id: ${{ env.COMMIT_ID }}
 
   cd:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: ci
     steps:
       - name: Clone Github repo
