--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -38,6 +38,19 @@ jobs:
     steps:
       - name: Clone Github repo
         uses: actions/checkout@v6
+    
+      - name: Modify charts/values.yaml file
+        shell: bash
+        run: |
+          echo "${{ needs.ci.outputs.commit_id }}"
+          sudo apt update && sudo apt install python3-pip -y
+          pip install yq
+          yq -Yi '.image.tag = "${{ needs.ci.outputs.commit_id }}"' charts/3py-app/values.yaml
+
+      - name: Commit change back to your github repo
+        uses: EndBug/add-and-commit@v9
+        with:
+          message: "updated Helm values.yaml with commit - ${{ needs.ci.outputs.commit_id }}"
 
       - name: Install ArgoCD App
         shell: bash
